--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,4 +46,4 @@ jobs:
 
     - name: 推送成功通知
       run: |
-        curl $(echo ${{ secrets.HOOK_URL }})
+        curl -X GET $(echo ${{ secrets.HOOK_URL }})
