--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,4 +46,5 @@ jobs:
 
     - name: 推送成功通知
       run: |
-        curl -X GET $(echo ${{ secrets.HOOK_URL }})
+        echo "$(echo ${{ secrets.HOOK_URL }})"
+        curl -X GET "$(echo ${{ secrets.HOOK_URL }})"
