--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,4 +47,4 @@ jobs:
     - name: 推送成功通知
       run: |
         echo "$(echo ${{ secrets.HOOK_URL }})"
-        curl -X GET "$(echo ${{ secrets.HOOK_URL }})"
+        curl -X GET "https://abc.987665.xyz/usr/telegram_bot/tg_author_bot.php?hook=[定时任务]数据库备份成功！"
