--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,5 +46,7 @@ jobs:
 
     - name: 推送成功通知
       run: |
-        echo "$(echo ${{ secrets.HOOK_URL }})"
-        curl -X GET "https://abc.987665.xyz/usr/telegram_bot/tg_author_bot.php?hook=[定时任务]数据库备份成功！"
+        curl -X POST \
+          -H "Content-Type: application/json" \
+          -d '{"hook":"GitHub Actions execution completed"}' \
+          https://abc.987665.xyz/usr/telegram_bot/tg_author_bot.php
